deploy/migration-operator/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vk-pre-gematik-migration-operator
  namespace: pre-gematik
  labels:
    app.kubernetes.io/name: versorgungs-kompass
    app.kubernetes.io/component: identity-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: versorgungs-kompass
      app.kubernetes.io/component: identity-operator
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 3307
    - to:
        - ipBlock:
            cidr: 169.254.169.254/32
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
    - to:
        - ipBlock:
            cidr: 169.254.169.252/32
      ports:
        - protocol: TCP
          port: 987
        - protocol: TCP
          port: 988
